--- a/Workshop-PHP-Instructor/src/login.html
+++ b/Workshop-PHP-Instructor/src/login.html
@@ -30,17 +30,16 @@
       <div class="login_wrapper">
         <div class="animate form login_form">
           <section class="login_content">
-            <form>
+            <form action="auth.php" method="post">
               <h1>Login Form</h1>
               <div>
-                <input type="text" class="form-control" placeholder="Username" required="" />
+                <input type="text" name="usuario" class="form-control" placeholder="Username" required="" />
               </div>
               <div>
-                <input type="password" class="form-control" placeholder="Password" required="" />
+                <input type="password" name="senha" class="form-control" placeholder="Password" required="" />
               </div>
               <div>
-                <a class="btn btn-default submit" href="index.html">Log in</a>
-                <a class="reset_pass" href="#">Lost your password?</a>
+                  <button type="button" class="btn btn-primary" onclick="this.form.submit();">Login</button>
               </div>
 
               <div class="clearfix"></div>
