--- a/Workshop-PHP-Instructor/src/login.html
+++ b/Workshop-PHP-Instructor/src/login.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Gentelella Alela! | </title>
+    <title>Workshop Onboarding! </title>
 
     <!-- Bootstrap -->
     <link href="../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -31,7 +31,7 @@
         <div class="animate form login_form">
           <section class="login_content">
             <form action="auth.php" method="post">
-              <h1>Login Form</h1>
+              <h1>Instructor App</h1>
               <div>
                 <input type="text" name="usuario" class="form-control" placeholder="Username" required="" />
               </div>
@@ -44,19 +44,6 @@
 
               <div class="clearfix"></div>
 
-              <div class="separator">
-                <p class="change_link">New to site?
-                  <a href="#signup" class="to_register"> Create Account </a>
-                </p>
-
-                <div class="clearfix"></div>
-                <br />
-
-                <div>
-                  <h1><i class="fa fa-paw"></i> Gentelella Alela!</h1>
-                  <p>©2016 All Rights Reserved. Gentelella Alela! is a Bootstrap 3 template. Privacy and Terms</p>
-                </div>
-              </div>
             </form>
           </section>
         </div>
