Fixes, adicao de classe de banco, ajustes de layout e etc...

--- a/Workshop-PHP-Instructor/src/login.html
+++ b/Workshop-PHP-Instructor/src/login.html
@@ -23,6 +23,11 @@
   </head>
 
   <body class="login">
+
+	<div class="row">
+	<img src="images/red-hat-logo.png" height=128><br>
+	</div>
+
     <div>
       <a class="hiddenanchor" id="signup"></a>
       <a class="hiddenanchor" id="signin"></a>
