Ajuste dos links de email final.

--- a/Workshop-PHP-Instructor/src/template_email_final.html
+++ b/Workshop-PHP-Instructor/src/template_email_final.html
@@ -279,8 +279,8 @@
                                 <h1 style="margin: 0 0 10px; font-size: 24px; line-height: 125%; color: #333333; font-weight: normal;">Obrigado pela sua participação em nosso evento!</h1>
                                 <p style="margin: 0 0 10px;">Conforme informamos durante o evento, o link para o material segue abaixo:</p>
                                 <ul style="padding: 0; margin: 0; list-style-type: disc;">
-                                    <a href="https://bitbucket.org/redhatbsb/workshop-ansible"><li style="margin:0 0 10px 30px;" class="list-item-first">Exercicios Ansible</li></a>
-					<a href="https://github.com/redhat-sa-brazil/workshop-openshift"><li style="margin:0 0 10px 30px;">Exercicios Openshift</li></a>
+                                    <a href="https://github.com/Lasherbr/ansible-workshop/blob/master/AnsibleCoreAndTower.adoc"><li style="margin:0 0 10px 30px;" class="list-item-first">Exercicios Ansible</li></a>
+					<a href="https://redhat-sa-brazil.gitbooks.io/workshop-openshift/content/parte2/parte-2-openshift-dev.html"><li style="margin:0 0 10px 30px;">Exercicios Openshift</li></a>
 								
 								</ul>
                             </td>
