--- a/Workshop-PHP-Instructor/src/template_email_final.html
+++ b/Workshop-PHP-Instructor/src/template_email_final.html
@@ -280,7 +280,7 @@
                                 <p style="margin: 0 0 10px;">Conforme informamos durante o evento, o link para o material segue abaixo:</p>
                                 <ul style="padding: 0; margin: 0; list-style-type: disc;">
                                     <a href="https://github.com/Lasherbr/ansible-workshop/blob/master/AnsibleCoreAndTower.adoc"><li style="margin:0 0 10px 30px;" class="list-item-first">Exercicios Ansible</li></a>
-					<a href="https://redhat-sa-brazil.gitbooks.io/workshop-openshift/content/parte2/parte-2-openshift-dev.html"><li style="margin:0 0 10px 30px;">Exercicios Openshift</li></a>
+					<a href="https://redhatbsb.gitbook.io/workshop-openshift"><li style="margin:0 0 10px 30px;">Exercicios Openshift</li></a>
 								
 								</ul>
                             </td>
