Adicao de link abaixo do botao.

--- a/Workshop-PHP-Instructor/src/template_email_estudante.html
+++ b/Workshop-PHP-Instructor/src/template_email_estudante.html
@@ -292,7 +292,14 @@
                                 <table role="presentation" cellspacing="0" cellpadding="0" border="0" align="center" style="margin: auto;">
                                     <tr>
                                         <td class="button-td button-td-primary" style="border-radius: 4px; background: #222222;">
-										     <a class="button-a button-a-primary" href="{{ url_estudante }}" style="background: #222222; border: 1px solid #000000; font-family: sans-serif; font-size: 15px; line-height: 15px; text-decoration: none; padding: 13px 17px; display: block; border-radius: 4px;"><span class="button-link" style="color:#ffffff">Acessar Minha Área de Trabalho</span></a>
+                                             <a class="button-a button-a-primary" href="{{ url_estudante }}" style="background: #222222; border: 1px solid #000000; font-family: sans-serif; font-size: 15px; line-height: 15px; text-decoration: none; padding: 13px 17px; display: block; border-radius: 4px;"><span class="button-link" style="color:#ffffff">Acessar Minha Área de Trabalho</span></a>
+                                             
+                                            <br>
+                                            ou
+                                            <br>
+                                            Acesse pelo link abaixo: <br>
+                                            <a href="{{ url_estudante }}">{{ url_estudante }}</a>
+
 										</td>
                                     </tr>
                                 </table>
